--- a/views/logged.hbs
+++ b/views/logged.hbs
@@ -1,5 +1,7 @@
 <section class="index-page">
-  <p class="success">
-    You have been successfully logged in!
-  </p>
+  <img class="avatar" src={{photos}}>
+    <h2> Hello {{name}} ! : )</h2>
+  <a href="/auth/auth.logout">
+    <h3>Log out</h3>
+  </a>
 </section>
